--- a/style.css
+++ b/style.css
@@ -1,86 +1,79 @@
 body {
-    background-color: #F4D03F;
-    background-image: linear-gradient(132deg, #F4D03F 0%, #16A085 100%);
-    padding: 10px;
-    margin-top:5px ;
+    background: #01AA85;
+    background: -webkit-linear-gradient(top left, #01AA85, #FFE428);
+    background: -moz-linear-gradient(top left, #01AA85, #FFE428);
+    background: linear-gradient(to bottom right, #01AA85, #FFE428);
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
 html {
-    
     height: 100%;
+    font-size: 100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
 
-h1 {
-    font-family: 'Kumbh Sans', sans-serif;
-    font-size: 50px;
-    color:white;
-    margin-top:10px;
-
+header {
+    margin: 1.3em;
 }
 
+h1 {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 3em;
+    color: white;
+    margin-top: 10px;
+}
 
 p {
     font-family: 'Kumbh Sans', sans-serif;
-    font-size: 16px;
-    color:white;
+    font-size: 1em;
+    color: white;
     line-height: 150%;
 }
 
 a {
-  text-decoration: none;
-	color: white;
-	font-weight: bold;
-	font-size: 16px;
-	position: relative;
-  padding-bottom: 2px;
-  
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: 1em;
+    position: relative;
+    padding-bottom: 2px;
 }
 
-a:after{
-	content: '';
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	width: 0%;
-	height: 100%;
-
-	border-bottom: 2px solid white;
-	
-	transition: width 0.3s ease;
+a:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 0%;
+    height: 100%;
+    border-bottom: 1px solid white;
+    transition: width 0.3s ease;
 }
 
-a:hover:after{
-	left: 0;
-	width: 100%;
-	transition: width .3s ease;
+a:hover:after {
+    left: 0;
+    width: 100%;
+    transition: width .3s ease;
 }
-
 
 .withincard {
-        font-family: 'Kumbh Sans', sans-serif;
-        font-size: 18px;
-        color:black;
-        margin-bottom: 5px;
-    
-
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 1.1em;
+    color: black;
+    margin-bottom: 5px;
 }
 
 .withincard_sub {
     font-family: 'Kumbh Sans', sans-serif;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 1.25em;
     margin-top: 5px;
-    color:black;
-
-
+    color: black;
 }
-
-
 
 .container {
     display: flex;
@@ -90,59 +83,73 @@ a:hover:after{
 }
 
 .cardcont {
+    align-items: center;
     background-color: white;
-    margin:20px;
+    margin: 20px;
     border-radius: 20px;
-    width: 303px;
+    width: 300px;
     height: 385px;
-    padding: 35px; 
-    overflow: hidden; 
-    position: relative; 
-    -webkit-box-shadow: 8px 8px 17px -5px rgba(0,0,0,0.4);
-    -moz-box-shadow: 8px 8px 17px -5px rgba(0,0,0,0.4);
-    box-shadow: 8px 8px 17px -5px rgba(0,0,0,0.4);
-    
+    padding: 25px;
+    overflow: hidden;
+    position: relative;
+    -webkit-box-shadow: 8px 8px 17px -5px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 8px 8px 17px -5px rgba(0, 0, 0, 0.4);
+    box-shadow: 8px 8px 17px -5px rgba(0, 0, 0, 0.4);
 }
 
-
-
-  .container .cardcont .card {
+.container .cardcont .card {
+    align-self: center;
     position: relative;
     color: white;
     cursor: pointer;
     -webkit-transition: 1s ease-in-out;
     transition: 1s ease-in-out;
     -webkit-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-  }
-  .container .cardcont .card:hover {
+    transform-style: preserve-3d;
+}
+
+.container .cardcont .card:hover {
     -webkit-transform: rotateY(0.5turn);
-            transform: rotateY(0.5turn);
-  }
-  .container .cardcont .card .card__face {
+    transform: rotateY(0.5turn);
+}
+
+.container .cardcont .card .card__face {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
+    backface-visibility: hidden;
     -webkit-transition: 1s ease-in-out;
     transition: 1s ease-in-out;
+}
 
-  }
-  .container .cardcont .card .card__face img {
-
+.container .cardcont .card .card__face img {
+    border-radius: 3%;
     width: 300px;
-    height:300px;
+    height: 300px;
     -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .container .cardcont .card .card__face--back {
-    position:absolute;
-    top:0;
-    left:0;
+    object-fit: cover;
+}
+
+.container .cardcont .card .card__face--back {
+    position: absolute;
+    border-radius: 20px;
+    top: 0;
+    left: 0;
     -webkit-transform: rotateY(0.5turn);
-            transform: rotateY(0.5turn);
-  }
-  
+    transform: rotateY(0.5turn);
+}
+
+@media screen and (max-device-width: 700px) {
+    p {
+        font-size: 2em;
+    }
+    h1 {
+        font-size: 6em;
+    }
+    header {
+        margin: 2.6em;
+    }
+}
