--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
 body {
     background: #01AA85;
     background: -webkit-linear-gradient(top left, #01AA85, #FFE428);
