--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ a:hover:after {
 
 .container .cardcont .card .card__face img {
     border-radius: 3%;
-    width: 300px;
+    width: 100%;
     height: 300px;
     -o-object-fit: cover;
     object-fit: cover;
@@ -141,16 +141,4 @@ a:hover:after {
     left: 0;
     -webkit-transform: rotateY(0.5turn);
     transform: rotateY(0.5turn);
-}
-
-@media screen and (max-device-width: 700px) {
-    p {
-        font-size: 2em;
-    }
-    h1 {
-        font-size: 6em;
-    }
-    header {
-        margin: 2.6em;
-    }
 }
