--- a/style.css
+++ b/style.css
@@ -77,9 +77,10 @@ a:hover:after {
 }
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+    display:flex;
+    flex-wrap: wrap-reverse;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
     width: 100%;
 }
 
@@ -142,3 +143,7 @@ a:hover:after {
     -webkit-transform: rotateY(0.5turn);
     transform: rotateY(0.5turn);
 }
+
+.preloader {
+    background:url('img/loader.svg') center center no-repeat;
+  }
