--- a/style.css
+++ b/style.css
@@ -78,9 +78,9 @@ a:hover:after {
 
 .container {
     display:flex;
-    flex-wrap: wrap-reverse;
-    flex-direction: row-reverse;
-    justify-content: flex-end;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
     width: 100%;
 }
 
