--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -155,6 +155,24 @@ a:hover:after {
     margin-bottom: 30px;
     padding-bottom:5px;
 }
+
+input {
+    margin-bottom: 30px;
+    padding-bottom:5px;
+    border: none;
+    display:inline-block;
+    padding: 25px;
+    margin:20px;
+    background-color: white;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 1.1em;
+    font-weight:700;
+    border-radius:20px;
+    -webkit-box-shadow: 8px 8px 17px -5px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 8px 8px 17px -5px rgba(0, 0, 0, 0.4);
+    box-shadow: 8px 8px 17px -5px rgba(0, 0, 0, 0.4);
+}
+
 .morealbums {
     border: none;
     display:inline-block;
@@ -170,8 +188,31 @@ a:hover:after {
     box-shadow: 8px 8px 17px -5px rgba(0, 0, 0, 0.4);
 }
 
-.morealbums:hover {
-    cursor: pointer;
+.feelingLucky, .displayAll {
+    border: none;
+    display:inline-block;
+    padding: 25px;
+    margin:12px;
+    background-color: white;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 1.1em;
+    font-weight:700;
+    border-radius:20px;
+    -webkit-box-shadow: 8px 8px 17px -5px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 8px 8px 17px -5px rgba(0, 0, 0, 0.4);
+    box-shadow: 8px 8px 17px -5px rgba(0, 0, 0, 0.4);
+}
 
+.results {
+    color: white;
+    margin-left: 30px;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 1.1em;
+    font-weight:700;
+    
+}
+
+.morealbums:hover, .feelingLucky:hover, .displayAll:hover {
+    cursor: pointer;
 }
 
