--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -174,6 +174,7 @@ input {
 }
 
 .morealbums {
+    color: black;
     border: none;
     display:inline-block;
     padding: 25px;
@@ -189,6 +190,7 @@ input {
 }
 
 .feelingLucky, .displayAll {
+    color:black;
     border: none;
     display:inline-block;
     padding: 25px;
